--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,7 @@
-streamlit
-pandas
-scikit-learn
-padelpy
-stmol
-py3Dmol
-rdkit-pypi
+streamlit==1.12.0
+pandas==1.3.5
+scikit-learn==1.0.2
+padelpy==0.1.11
+stmol==0.0.9
+py3Dmol==1.8.1
+rdkit-pypi==2022.3.5
